--- a/test/fixtures/steps.yml
+++ b/test/fixtures/steps.yml
@@ -1,9 +1,10 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  description: MyString
-
+  name: step 1
+  description: do blah blah blah 111
+  list: firstList
 two:
-  name: MyString
-  description: MyString
+  name: step 2
+  description: do blah blah blah 22
+  list: firstList
